llm-d-GKE/k8s/httproute2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-route
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  - backendRefs:
    - name: vllm-llama3-8b-instruct
      group: "inference.networking.k8s.io"
      kind: InferencePool
